--- a/articles/styles.css
+++ b/articles/styles.css
@@ -112,3 +112,12 @@ img{
     color: black;
     text-decoration: underline;
 }
+
+#newPassword {
+    background-color: red;
+    max-width: 100vw;
+    text-wrap: wrap;
+    word-wrap: break-word
+
+
+}
